--- a/app/admin/view/node/update.html
+++ b/app/admin/view/node/update.html
@@ -45,7 +45,7 @@
                                 <input class="layui-input" type="text" name="view" placeholder="视图标题">
                             </div>
                             <div class="layui-input-inline">
-                                例如：view/adminSave
+                                例如：view/admin_save
                             </div>
                         </td>
                     </tr>
