--- a/app/admin/view/article/update.html
+++ b/app/admin/view/article/update.html
@@ -120,6 +120,7 @@
                         <td>
                             <div class="layui-input-inline">
                                 <button class="layui-btn" lay-submit lay-filter="formSubmit">立即提交</button>
+                                <input type="hidden" name="id">
                             </div>
                         </td>
                     </tr>
