--- a/app/admin/view/news/save.html
+++ b/app/admin/view/news/save.html
@@ -1,5 +1,5 @@
 {extend name="public/base_layui" /}
-{block name="title"}文章保存{/block}
+{block name="title"}新闻保存{/block}
 {block name="load"}
 <!-- css -->
 <!-- js -->
@@ -12,17 +12,17 @@
             <table class="layui-table" lay-size="lg" lay-skin="line">
                 <thead>
                     <tr>
-                        <th colspan="2">文章添加</th>
+                        <th colspan="2">新闻添加</th>
                     </tr>
                 </thead>
                 <tbody>
 
                     <tr>
-                        <td align="right"><strong>文章分类：</strong></td>
+                        <td align="right"><strong>新闻分类：</strong></td>
                         <td>
                             <div style="margin-bottom:10px;">
                                 <div class="layui-input-inline">
-                                    <select id="layui-select" name="article_cate_id">
+                                    <select id="layui-select" name="news_cate_id">
                                         <option value="">请选择</option>
                                     </select>
                                 </div>
@@ -31,13 +31,13 @@
                     </tr>
 
                     <tr>
-                        <td width="150" align="right"><strong>文章标题：</strong></td>
+                        <td width="150" align="right"><strong>新闻标题：</strong></td>
                         <td>
                             <div class="layui-input-inline">
-                                <input class="layui-input" type="text" name="title" placeholder="文章名称" style="width: 400px;">
+                                <input class="layui-input" type="text" name="title" placeholder="新闻名称" style="width: 400px;">
                             </div>
                             <div class="layui-input-inline">
-                                <span style="color: red;">*</span> 将会成为文章唯一标题
+                                <span style="color: red;">*</span> 将会成为新闻唯一标题
                             </div>
                         </td>
                     </tr>
@@ -130,8 +130,8 @@
 
 <script>
         
-    // 获取文章分类数据
-    var role = ajax_list('/article_cate');
+    // 获取新闻分类数据
+    var role = ajax_list('/news_cate');
     console.log(role);
     for (let value of role) {
         $('#layui-select').append('<option value="' + value['id'] + '">' + value['cate_name'] + '</option>');
@@ -148,7 +148,7 @@
         // 封面
         layui_upload_image(upload);
         // 保存
-        layui_ajax_save(form, '/article');
+        layui_ajax_save(form, '/news');
 
     });
 
