--- a/app/admin/view/about_cate/index.html
+++ b/app/admin/view/about_cate/index.html
@@ -1,5 +1,5 @@
 {extend name="public/base_layui" /}
-{block name="title"}新闻分类列表{/block}
+{block name="title"}分类{/block}
 {block name="load"}
 <!-- css -->
 <!-- js -->
@@ -9,7 +9,7 @@
 <div class="layui-fluid">
     <div class="layui-row layui-col-md-offset0" style="margin-bottom:20px;">
         <div class="layui-col-md9">
-            <a href="/view/about_cate_save" class="layui-btn layui-btn-danger">添加新闻分类</a>
+            <a href="/view/about_cate_save" class="layui-btn layui-btn-danger">添加分类</a>
         </div>
     </div>
     <form class="layui-form" action="" method="post">
