--- a/app/admin/view/news/update.html
+++ b/app/admin/view/news/update.html
@@ -1,5 +1,5 @@
 {extend name="public/base_layui" /}
-{block name="title"}新闻保存{/block}
+{block name="title"}保存{/block}
 {block name="load"}
 <!-- css -->
 <!-- js -->
@@ -12,13 +12,13 @@
             <table class="layui-table" lay-size="lg" lay-skin="line">
                 <thead>
                     <tr>
-                        <th colspan="2">新闻添加</th>
+                        <th colspan="2">添加</th>
                     </tr>
                 </thead>
                 <tbody>
 
                     <tr>
-                        <td align="right"><strong>新闻分类：</strong></td>
+                        <td align="right"><strong>分类：</strong></td>
                         <td>
                             <div style="margin-bottom:10px;">
                                 <div class="layui-input-inline">
@@ -31,13 +31,13 @@
                     </tr>
 
                     <tr>
-                        <td width="150" align="right"><strong>新闻标题：</strong></td>
+                        <td width="150" align="right"><strong>标题：</strong></td>
                         <td>
                             <div class="layui-input-inline">
-                                <input class="layui-input" type="text" name="title" placeholder="新闻标题" style="width: 400px;">
+                                <input class="layui-input" type="text" name="title" placeholder="标题" style="width: 400px;">
                             </div>
                             <div class="layui-input-inline">
-                                <span style="color: red;">*</span> 将会成为新闻唯一标题
+                                <span style="color: red;">*</span> 将会成为唯一标题
                             </div>
                         </td>
                     </tr>
@@ -132,14 +132,14 @@
 
 <script>
     
-    // 获取新闻分类数据
+    // 获取分类数据
     var role = ajax_list('/news_cate');
     console.log(role);
     for (let value of role) {
         $('#layui-select').append('<option value="' + value['id'] + '">' + value['cate_name'] + '</option>');
     }
 
-    // 获取新闻数据
+    // 获取数据
     let data = ajax_read('/news');
     
     layui.use(['form', 'layer', 'upload', 'jquery'], function () {
@@ -154,9 +154,9 @@
             'news_cate_id': data.cate.id,
             'content': HtmlUtil.htmlDecode(data.desc.content)
         });
-        // 图片
+        // 图片赋值
         $('#upload-preview').attr('src', data.image);
-        // 封面
+        // 上传图片
         layui_upload_image(upload);
         // 更新数据
         layui_ajax_update(form, '/news');
