--- a/app/admin/view/slide/update.html
+++ b/app/admin/view/slide/update.html
@@ -1,5 +1,5 @@
 {extend name="public/base_layui" /}
-{block name="title"}文章保存{/block}
+{block name="title"}轮播图保存{/block}
 {block name="load"}
 <!-- css -->
 <!-- js -->
@@ -12,17 +12,17 @@
             <table class="layui-table" lay-size="lg" lay-skin="line">
                 <thead>
                     <tr>
-                        <th colspan="2">文章添加</th>
+                        <th colspan="2">轮播图添加</th>
                     </tr>
                 </thead>
                 <tbody>
 
                     <tr>
-                        <td align="right"><strong>文章分类：</strong></td>
+                        <td align="right"><strong>轮播图分类：</strong></td>
                         <td>
                             <div style="margin-bottom:10px;">
                                 <div class="layui-input-inline">
-                                    <select id="layui-select" name="article_cate_id">
+                                    <select id="layui-select" name="category_id">
                                         <option value="">请选择</option>
                                     </select>
                                 </div>
@@ -31,13 +31,13 @@
                     </tr>
 
                     <tr>
-                        <td width="150" align="right"><strong>文章标题：</strong></td>
+                        <td width="150" align="right"><strong>轮播图标题：</strong></td>
                         <td>
                             <div class="layui-input-inline">
-                                <input class="layui-input" type="text" name="title" placeholder="文章标题" style="width: 400px;">
+                                <input class="layui-input" type="text" name="title" placeholder="轮播图标题" style="width: 400px;">
                             </div>
                             <div class="layui-input-inline">
-                                <span style="color: red;">*</span> 将会成为文章唯一标题
+                                <span style="color: red;">*</span> 将会成为轮播图唯一标题
                             </div>
                         </td>
                     </tr>
@@ -132,15 +132,15 @@
 
 <script>
     
-    // 获取文章分类数据
-    var role = ajax_list('/article_cate');
+    // 获取轮播图分类数据
+    var role = ajax_list('/category');
     console.log(role);
     for (let value of role) {
         $('#layui-select').append('<option value="' + value['id'] + '">' + value['cate_name'] + '</option>');
     }
 
-    // 获取文章数据
-    let data = ajax_read('/article');
+    // 获取轮播图数据
+    let data = ajax_read('/about');
     
     layui.use(['form', 'layer', 'upload', 'jquery'], function () {
         $ = layui.jquery;
@@ -151,7 +151,7 @@
         // 赋值
         form.val("form", data);
         form.val("form", {
-            'article_cate_id': data.cate.id,
+            'category_id': data.cate.id,
             'content': HtmlUtil.htmlDecode(data.desc.content)
         });
         // 图片赋值
@@ -159,7 +159,7 @@
         // 上传图片
         layui_upload_image(upload);
         // 更新数据
-        layui_ajax_update(form, '/article');
+        layui_ajax_update(form, '/about');
 
     });
 
