--- a/app/admin/view/public/base_layui.html
+++ b/app/admin/view/public/base_layui.html
@@ -20,7 +20,7 @@
 	<script src="__COMMON__/js/jquery.min.js" charset="utf-8"></script>
 	<script src="__COMMON__/js/jquery.cookie.js" charset="utf-8"></script>
 	<script src="__COMMON__/js/common.js" charset="utf-8"></script>
-	<script src="__COMMON__/js/ajax.js" charset="utf-8"></script>
+	<script src="__COMMON__/js/ajax_admin.js" charset="utf-8"></script>
 	<script src="__COMMON__/js/ajax_layui.js" charset="utf-8"></script>
 	<script>
 		// 验证登录
