--- a/app/front/view/public/base.html
+++ b/app/front/view/public/base.html
@@ -36,6 +36,9 @@
     <script src="__FRONT__/js/bshare_view.js" type="text/javascript" charset="utf-8"></script>
     <script src="__COMMON__/lib/layer/layer.js" type="text/javascript" charset="utf-8"></script>
     <script src="__COMMON__/lib/layui/layui.js" type="text/javascript" charset="utf-8"></script>
+	<script src="__COMMON__/js/jquery.cookie.js" charset="utf-8"></script>
+	<script src="__COMMON__/js/common.js" charset="utf-8"></script>
+	<script src="__COMMON__/js/ajax_api.js" charset="utf-8"></script>
 
     {block name="load"}{/block}
 </head>
