--- a/app/front/view/index/index.html
+++ b/app/front/view/index/index.html
@@ -203,36 +203,6 @@
 
                 <div id="News3" class="">
                   <ul>
-                    <li><a href="http://www.gdwse.com/products/2959.html" title="侵权预警！亚马逊沙龙排行榜NO.1，留评4000＋神器被起诉">
-                        <div class="nc-right">侵权预警！亚马逊沙龙排行榜NO.1，留评4000＋神器被起诉</div>
-                        <div class="nc-left">
-                          <p>2021-05-31</p>
-                        </div>
-                      </a></li>
-                    <li><a href="http://www.gdwse.com/products/2958.html" title="亚马逊监管再升级，大卖新玩法已在路上……">
-                        <div class="nc-right">亚马逊监管再升级，大卖新玩法已在路上……</div>
-                        <div class="nc-left">
-                          <p>2021-05-31</p>
-                        </div>
-                      </a></li>
-                    <li><a href="http://www.gdwse.com/products/2957.html" title="亚马逊等多平台紧急下架，又一五星级爆款凉了！">
-                        <div class="nc-right">亚马逊等多平台紧急下架，又一五星级爆款凉了！</div>
-                        <div class="nc-left">
-                          <p>2021-05-31</p>
-                        </div>
-                      </a></li>
-                    <li><a href="http://www.gdwse.com/products/2953.html" title="突发！亚马逊又宕机了，大批卖家订单暴跌……">
-                        <div class="nc-right">突发！亚马逊又宕机了，大批卖家订单暴跌……</div>
-                        <div class="nc-left">
-                          <p>2021-03-11</p>
-                        </div>
-                      </a></li>
-                    <li><a href="http://www.gdwse.com/products/2952.html" title="实锤！这一测评渠道被亚马逊官宣停用">
-                        <div class="nc-right">实锤！这一测评渠道被亚马逊官宣停用</div>
-                        <div class="nc-left">
-                          <p>2021-03-11</p>
-                        </div>
-                      </a></li>
                   </ul>
                 </div>
               </div>
@@ -276,6 +246,24 @@
               </div>
             </div>
           </div>
+          <script>
+            // 获取跨境咨询列表
+            let articleList = ajax_list('/article/list?page=1&limit=6');
+            // console.log(articleList);
+            // alert(articleList);
+            var html = '';
+            $.each(articleList, function (key, value) {
+                html += '<li>';
+                html += '<a href="http://www.wse.com/article/'+value['id']+'" title="'+value['title']+'">';
+                html += '<div class="nc-right">'+value['title']+'</div>';
+                html += '<div class="nc-left">';
+                html += '<p>'+timestampToTime(value['create_time'])+'</p>';
+                html += '</div>';
+                html += '</a>';
+                html += '</li>';
+            });
+            $('#News3 ul').append(html);
+        </script>
         </div>
         <script type="text/javascript">
           function nTabs(thisObj, Num) {
